--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
                         <p>Executes procedures in assigned areas of the Laboratory to deliver accurate results in a timely manner, maintaining competence to perform pre-analytic, analytic and post-analytic procedures on biological specimens to aid health care providers in the diagnosis, treatment, monitoring and prevention of disease. Performs a variety of basic and complex Laboratory procedures, including phlebotomy, specimen processing, quality control, quality assurance, and waived, moderate or high complexity testing.</p>
                     </div>
                     <div class="timeline-image">
-                        <img src="assets/img/Adventist.jpg" alt="Lab Photo" class="portrait-image" style="margin-left: 10%; width: 100%;">
+                        <img src="assets/img/Adventist.jpg" alt="Lab Photo" class="portrait-image" style="margin-left: -10%; width: 500px;">
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
                     <div class="timeline-image">
-                    <img src="assets/img/sutter.jpg" alt="Sutter Health Memorial Medical Center" class="portrait-image" style="margin-left: -10%; width: 100%;">
+                    <img src="assets/img/sutter.jpg" alt="Sutter Health Memorial Medical Center" class="portrait-image" style="margin-left: 10%; width: 500px;">
                     </div>
                     <div class="timeline-content">
                         <h3>Clinical Laboratory Scientist (Part-time)</h3>
@@ -154,13 +154,13 @@
                         <p>Directed microbiology laboratory operations, performed advanced bacterial and fungal identification, specialized microscopy, managed inventory for media and antibiotic testing, and partnered with infection control to monitor hospital-acquired infection trends.</p>
                     </div>
                     <div class="timeline-image">
-                        <img src="assets/img/Allah.jpg" alt="Lab Photo" class="portrait-image" style="margin-left: 10%; width: 100%;">
+                        <img src="assets/img/Allah.jpg" alt="Lab Photo" class="portrait-image" style="margin-left: -10%; width: 500px;">
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
                     <div class="timeline-image">
-                        <img src="assets/img/Allah.jpg" alt="Lab Photo" class="portrait-image" style="margin-left: -10%; width: 100%;">
+                        <img src="assets/img/Allah.jpg" alt="Lab Photo" class="portrait-image" style="margin-left: 10%; width: 500px;">
                     </div>
                     <div class="timeline-content">
                         <h3>Assistant Quality Assurance Officer</h3>
@@ -178,14 +178,14 @@
                         <p>Executed laboratory procedures in Hematology, Chemistry, and Microbiology, managed urgent lab requests while maintaining quality standards, and assisted clinical teams with rapid turnaround for emergency cases.</p>
                     </div>
                      <div class="timeline-image">
-                        <img src="assets/img/Brokenshire.jpg" alt="Lab Photo" class="portrait-image" style="margin-left: 10%; width: 100%;">
+                        <img src="assets/img/Brokenshire.jpg" alt="Lab Photo" class="portrait-image" style="margin-left: -10%; width: 500px;">
                     </div>
                     
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
                      <div class="timeline-image">
-                        <img src="assets/img/Allah.jpg" alt="Lab Photo" class="portrait-image" style="margin-left: -10%; width: 100%;">
+                        <img src="assets/img/Allah.jpg" alt="Lab Photo" class="portrait-image" style="margin-left: 10%; width: 500px;">
                     </div>
                     <div class="timeline-content">
                         <h3>Registered Medical Technologist (Generalist)</h3>
